final frontend tweaks after cookies integration + routing errors fixed, next -> replace mockdata with actual backend data